# cyberdog_vision

./: CMakeLists.txt  README.md  package.xml
cmake/: FindXMBODY.cmake  FindXMFACE.cmake  FindXMREID.cmake  FindXMTRACK.cmake  FindXmBody.cmake  FindXmFace.cmake  FindXmGesture.cmake  FindXmKeypoints.cmake  FindXmReID.cmake  FindXmTrack.cmake
cyberdog_vision/: CMakeLists.txt  package.xml
cyberdog_vision/cmake/: FindXMBODY.cmake  FindXMFACE.cmake  FindXMGESTURE.cmake  FindXMKEYPOINTS.cmake  FindXMREID.cmake  FindXMTRACK.cmake
cyberdog_vision/include/cyberdog_vision/: auto_track.hpp  body_detection.hpp  common_type.hpp  face_manager.hpp  face_recognition.hpp  gesture_recognition.hpp  keypoints_detection.hpp  person_reid.hpp  semaphore_op.hpp  shared_memory_op.hpp  vision_manager.hpp
cyberdog_vision/src/: auto_track.cpp  body_detection.cpp  face_manager.cpp  face_recognition.cpp  gesture_recognition.cpp  keypoints_detection.cpp  main.cpp  person_reid.cpp  vision_manager.cpp
include/cyberdog_vision/: auto_track.hpp  body_detection.hpp  common_type.hpp  face_manager.hpp  face_recognition.hpp  gesture_recognition.hpp  keypoints_detection.hpp  person_reid.hpp  semaphore_op.hpp  shared_memory_op.hpp  vision_manager.hpp
src/: auto_track.cpp  body_detection.cpp  client.cpp  face_manager.cpp  face_recognition.cpp  gesture_recognition.cpp  img_produce.cpp  keypoints_detection.cpp  main.cpp  person_reid.cpp  test_ai.cpp  vision_manager.cpp
