<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="liufeifei6@xiaomi.com">lff</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>protocol</build_depend>
  <build_depend>nav2_util</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>protocol</exec_depend>
  <exec_depend>nav2_util</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
